src/test/deca/context/valid/if_else_while.deca

// Description :
// Condition dans if/else et while
//
// Resultats :
// ok
//

{
  boolean b = true;
  if (b) {
    println("beee yourself");
  } else {
    println("just do it");
  }
  while (false) {
    print(1);
  }
}