src/test/deca/context/invalid/if_cond.deca

// Description :
// Condition de if non booléenne 
//
// Resultats :
// Erreur contextuelle
//condition de if doit être boolean
//

{
  if (1) {
    println("x");
  }
}